# LEOSS-product-api

./: CMakeLists.txt  Product Api.csproj  Product Api.sln  Startup.cs  appsettings.json
Controllers/: ProductsController.cs
Models/: Product.cs  ProductContext.cs
Properties/: launchSettings.json
